--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="https://via.placeholder.com/150" alt="Product Image">
         <h2>Product Name</h2>
         <p>Price: $10.00</p>
-        <button onclick="window.location.href='thankyou.html'">Purchase</button>
+        <button onclick="window.location.href='about.html'">Purchase</button>
     </div>
 
 </body>
